Base for gameobject loading, handling, spawning

--- a/win/BubbleWorldServer.vcxproj
+++ b/win/BubbleWorldServer.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="..\src\Network\Session.cpp" />
     <ClCompile Include="..\src\Network\SmartPacket.cpp" />
     <ClCompile Include="..\src\Objects\Creature.cpp" />
+    <ClCompile Include="..\src\Objects\Gameobject.cpp" />
     <ClCompile Include="..\src\Objects\Player.cpp" />
     <ClCompile Include="..\src\Objects\Unit.cpp" />
     <ClCompile Include="..\src\Objects\WorldObject.cpp" />
@@ -166,6 +167,7 @@
     <ClCompile Include="..\src\Storage\CharacterStorage.cpp" />
     <ClCompile Include="..\src\Storage\CreatureStorage.cpp" />
     <ClCompile Include="..\src\Storage\DatabaseConnection.cpp" />
+    <ClCompile Include="..\src\Storage\GameobjectStorage.cpp" />
     <ClCompile Include="..\src\Storage\MapStorage.cpp" />
     <ClCompile Include="..\src\Storage\ResourceStorage.cpp" />
   </ItemGroup>
@@ -190,6 +192,7 @@
     <ClInclude Include="..\src\Network\SmartPacket.h" />
     <ClInclude Include="..\src\Objects\AnimEnums.h" />
     <ClInclude Include="..\src\Objects\Creature.h" />
+    <ClInclude Include="..\src\Objects\Gameobject.h" />
     <ClInclude Include="..\src\Objects\ObjectEnums.h" />
     <ClInclude Include="..\src\Objects\Player.h" />
     <ClInclude Include="..\src\Objects\Unit.h" />
@@ -200,6 +203,7 @@
     <ClInclude Include="..\src\Storage\CharacterStorage.h" />
     <ClInclude Include="..\src\Storage\CreatureStorage.h" />
     <ClInclude Include="..\src\Storage\DatabaseConnection.h" />
+    <ClInclude Include="..\src\Storage\GameobjectStorage.h" />
     <ClInclude Include="..\src\Storage\MapStorage.h" />
     <ClInclude Include="..\src\Storage\ResourceStorage.h" />
   </ItemGroup>
