--- a/win/BubbleWorldServer.vcxproj.filters
+++ b/win/BubbleWorldServer.vcxproj.filters
@@ -154,6 +154,12 @@
     <ClCompile Include="..\src\Storage\WaypointStorage.cpp">
       <Filter>src\Storage</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Objects\Movement\RandomMovementGenerator.cpp">
+      <Filter>src\Objects\Movement</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\General\Random.cpp">
+      <Filter>src\General</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\General\Application.h">
@@ -287,6 +293,12 @@
     </ClInclude>
     <ClInclude Include="..\src\Storage\WaypointStorage.h">
       <Filter>src\Storage</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Objects\Movement\RandomMovementGenerator.h">
+      <Filter>src\Objects\Movement</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\General\Random.h">
+      <Filter>src\General</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
